# os_labs

./: CMakeLists.txt  README.md
KP/: CMakeLists.txt  main.cpp
KP/include/: Barrier.h  DAG.h  ThreadPool.h
KP/src/: Barrier.cpp  DAG.cpp  Job.cpp  ThreadPool.cpp
lab1/: CMakeLists.txt  main.c
lab1/doc/: .~lock.report.docx#  report.docx  title.docx
lab1/include/: child.h  parent.h
lab1/src/: child.c  parent.c
lab2/: CMakeLists.txt  main.cpp
lab2/doc/: report.docx  title.docx
lab2/include/: timsort.h
lab2/src/: timsort.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/doc/: report.docx  title.docx
lab3/include/: child.h  parent.h
lab3/src/: child.cpp  parent.cpp
lab4/: CMakeLists.txt  main.cpp  main_dynamic.cpp
lab4/doc/: report.docx  title.docx
lab4/include/: my_math.h
lab4/src/: impl1.cpp  impl2.cpp
lab5-7/: CMakeLists.txt  main.cpp
lab5-7/doc/: report.docx  title.docx
lab5-7/src/: utils.cpp
lab5/include/: controller.h  utils.h  worker_node.h
lab5/src/: controller.cpp  worker.cpp  worker_node.cpp
lab8/: LAB8.docx  title.docx
tests/: CMakeLists.txt  lab1_tests.cpp  lab2_tests.cpp  lab3_tests.cpp  lab4_tests.cpp  lab5_tests.cpp  lab8_tests.cpp
